# stemmata

./: .gitignore  README.md  pyproject.toml
.github/workflows/: audit.yml  publish.yml  tests.yml
docs/: interpolation.md
examples/abstract-placeholders/: README.md  abstract-placeholders-0.1.0.tgz  package.json
examples/abstract-placeholders/prompts/: friendly-persona.yaml  persona-template.yaml
examples/sample-onboarding/: defaults.yaml  package.json
examples/sample-onboarding/prompts/: database.yaml  onboarding.yaml  persona.yaml
src/stemmata/: abstracts.py  bundle.py  cache.py  cli.py  deps_check.py  envelope.py  errors.py  init.py  install.py  interp.py  json_loader.py  manifest.py  markdown_loader.py  merge.py  npmrc.py  prompt_doc.py  publish.py  registry.py  resolver.py  resource_loader.py  resource_resolve.py  schema_check.py  validate.py  yaml_loader.py
tests/: test_abstracts.py  test_bundle.py  test_cache.py  test_cli_integration.py  test_deps_check.py  test_init.py  test_interp.py  test_json_loader.py  test_manifest.py  test_markdown_loader.py  test_npmrc.py  test_overrides.py  test_prompt_doc.py  test_publish.py  test_resource_loader.py  test_resources.py  test_resources_manifest.py  test_trust_store.py  test_validate.py  test_yaml_loader.py
