[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "stemmata"
version = "0.0.1"
description = "Hierarchical prompt resolver CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Pedro Javier Martos Velasco" }
]
keywords = ["prompt", "yaml", "inheritance", "composition", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
publish = ["jsonschema>=4.18"]

[project.urls]
Homepage = "https://github.com/pjmartos/genealogy"
Repository = "https://github.com/pjmartos/genealogy"
Issues = "https://github.com/pjmartos/genealogy/issues"

[project.scripts]
stemmata = "stemmata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
