[build-system]
requires = ["setuptools==82.0.1", "setuptools_scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "stemmata"
dynamic = ["version"]
description = "Hierarchical prompt resolver CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Pedro Javier Martos Velasco" }
]
keywords = ["prompt", "yaml", "inheritance", "composition", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = ["PyYAML==6.0.3", "jsonschema==4.26.0"]

[project.urls]
Homepage = "https://github.com/pjmartos/stemmata"
Repository = "https://github.com/pjmartos/stemmata"
Issues = "https://github.com/pjmartos/stemmata/issues"

[project.scripts]
stemmata = "stemmata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
